# sherlockpip

./: .gitignore  pyproject.toml
sherlock/: sherlock.py
